--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
-{}{
+{
   "name": "funny-scraper",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "postinstall": "playwright install --with-deps"
   },
   "dependencies": {
-    "express": "latest"
+    "express": "latest",
+    "playwright": "latest"
   }
 }
