--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "funny-scraper",
   "version": "1.0.0",
-  "main": "index.js",
   "type": "module",
+  "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "postinstall": "playwright install --with-deps"
+    "start": "node index.js"
   },
   "dependencies": {
-    "express": "latest",
-    "playwright": "latest"
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "node-fetch": "^3.3.2"
   }
 }
